--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/haptics": "^7.0.2",
+    "@capacitor/share": "^7.0.2",
     "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
