Rename app to Astral Swap

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "White Elephant Picker",
-  "short_name": "White Elephant",
+  "name": "Astral Swap",
+  "short_name": "Astral Swap",
   "description": "Fun way to organize gift exchanges with custom rules",
   "start_url": "/",
   "display": "standalone",
