Phase 1-2 Complete: Database setup, schema, migrations, and initial auth API routes

--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "@capacitor/keyboard": "^7.0.3",
     "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
+    "@neondatabase/serverless": "^1.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.7",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.33",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
@@ -32,6 +39,7 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "tsx": "^4.20.6"
   }
 }
